<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMint1"
    tools:context="fyp.medcare.MainActivity">

    <ImageView
        android:id="@+id/imgMainList"
        android:layout_width="110dp"
        android:layout_height="108dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_list" />

    <ImageView
        android:id="@+id/imgMainCheck"
        android:layout_width="110dp"
        android:layout_height="108dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="84dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_check" />

    <ImageView
        android:id="@+id/imgMainCall"
        android:layout_width="110dp"
        android:layout_height="108dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="240dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_call" />

    <TextView
        android:id="@+id/txtMainList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:text="@string/hosp_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMainList" />

    <TextView
        android:id="@+id/txtMainCheck"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="244dp"
        android:text="@string/check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMainCheck" />

    <TextView
        android:id="@+id/txtMainCall"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="148dp"
        android:text="@string/call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMainCall" />
</android.support.constraint.ConstraintLayout>
